--- a/intro.ipynb
+++ b/intro.ipynb
@@ -84,7 +84,7 @@
    "source": [
     "### Control\n",
     "When the wheel is driven by a motor, an extra torque is added to the system. This torque will depend on how large the angle is:\n",
-    "$$mg\\frac{L}{2}sin\\theta - M(\\theta) - F(w)=\\frac{1}{3}mL^2\\frac{d^2 \\theta}{dt^2}$$\n",
+    "$$\\summation{}{123} = mg\\frac{L}{2}sin\\theta - M(\\theta) - F(w)=\\frac{1}{3}mL^2\\frac{d^2 \\theta}{dt^2}$$\n",
     "\n",
     "$M$ will attempt to minimize the error ($\\theta$) in the fastest and most stable way possible. Using the state-space representation, we get:\n",
     "\n",
